# AYRIA

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Configuration.hpp  LICENSE  Stdinclude.hpp  vcpkg.json
Utilities/: Constexpr.hpp  Containers.hpp  Crypto.hpp  Datatypes.hpp  Encoding.hpp  Python.hpp  Strings.hpp  Threading.hpp  Utilities.hpp
Utilities/Constexpr/: Array.hpp  Endian.hpp  Math.hpp  Memory.hpp  Metaprogramming.hpp
Utilities/Containers/: Bytebuffer.hpp  Inlinedvector.hpp  Protobuffer.hpp  Ringbuffer.hpp
Utilities/Crypto/: AES.hpp  Checksums.hpp  SHA.hpp  Tiger192.hpp
Utilities/Datatypes/: bfloat16.hpp  float16.hpp  vec16.hpp
Utilities/Encoding/: JSON.hpp  UTF8.hpp
Utilities/Strings/: Tokenize.hpp  Variadic.hpp  toHex.hpp
Utilities/Threading/: Debugmutex.hpp  Spinlock.hpp
